--- a/website/templates/public/index.html
+++ b/website/templates/public/index.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaolos website</title>
+    <!-- google icons link -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <!-- google fonts link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400;500;600;700&family=Nunito:wght@200&family=Open+Sans:wght@300;400;500;600;700;800&family=Oswald:wght@200;400;500&family=Roboto:wght@100;300;400&family=Yanone+Kaffeesatz:wght@300&display=swap" rel="stylesheet"> 
+
 </head>
 <body>
+    {% load static %}
+   <link rel="stylesheet" href="{% static 'css/style.css' %}">
     
 </body>
 </html>
