--- a/website/templates/public/index.html
+++ b/website/templates/public/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-    {% load static %}
+    <!-- {% load static %} -->
    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     
 </body>
